# vulners-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  _env.py  async_check_connection.py  check_connection.py  exploits.py  linux_audit.py  search.py  software_audit.py
src/vulners/: __init__.py  _client.py  _exceptions.py  _rate_limit.py  _serde.py  _transport.py  _version.py
src/vulners/resources/: __init__.py  archive.py  audit.py  bulletins.py  documents.py  misc.py  reports.py  search.py  subscriptions.py
src/vulners/types/: __init__.py  archive.py  audit.py  bulletins.py  documents.py  misc.py  reports.py  search.py  subscriptions.py
tests/: test_archive.py  test_audit.py  test_bulletins.py  test_documents.py  test_integration.py  test_misc.py  test_rate_limit.py  test_reports.py  test_search.py  test_subscriptions.py  test_transport.py  typecheck_api.py
tests/fixtures/: search_page.json
