[project]
name = "vulners-py"
version = "0.1.0"
description = "A modern, strictly typed Python SDK for the Vulners API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Aleksandr Pavlov", email = "ckidoz@gmail.com" }]
dependencies = ["httpx>=0.28", "pydantic>=2.7"]

[project.optional-dependencies]
orjson = ["orjson>=3.10"]
http2 = ["httpx[http2]>=0.28"]

[dependency-groups]
dev = [
  "mypy>=1.14",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6",
  "respx>=0.22",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulners"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "PT", "RUF", "ANN", "TCH", "PERF", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
exclude = ["^tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=vulners --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["vulners"]

[tool.coverage.report]
fail_under = 90
